--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,33 @@ body {
   margin: 60px auto;
 }
 
-h1 {
+h1,
+h2,
+h3 {
   text-align: center;
+  margin: 0;
+}
+
+h1 {
+  font-size: 96px;
+}
+
+h2 {
+  font-size: 48px;
+}
+
+h3 {
+  font-size: 24px;
+  opacity: 0.7;
+}
+
+.email-link {
+  display: flex;
+  justify-content: center;
+  font-size: 28px;
+  text-decoration: none;
+}
+
+.email-link:hover {
+  text-decoration: underline;
 }
