--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,8 @@ h3 {
   text-transform: capitalize;
 }
 
-.contact-link {
+.contact-link,
+.project-link {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
@@ -63,4 +64,29 @@ h3 {
 .about-link {
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
+}
+
+.project-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.projects-brief p,
+.projects-brief a,
+.projects-brief h2 {
+  text-align: left;
+}
+
+.projects-brief p {
+  padding: 20px 0;
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.about-intro {
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: center;
 }
