--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,13 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-body {
-  margin: 60px auto;
+.home-content {
+  margin: 160px auto 60px;
+  max-width: 1000px;
+}
+
+.page-title {
+  margin-top: 100px;
 }
 
 h1,
