--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@ h1,
 h2,
 h3 {
   text-align: center;
-  margin: 0;
 }
 
 h1 {
@@ -91,7 +90,32 @@ h3 {
 }
 
 .about-intro {
+  padding: 0 20px;
   font-size: 18px;
   line-height: 1.5;
   text-align: center;
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 34px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  h3 {
+    font-size: 16px;
+    opacity: 0.7;
+  }
+
+  .projects-brief p,
+  .about-intro {
+    font-size: 16px;
+  }
+
+  a {
+    font-size: 12px;
+  }
 }
