Adjusted main breakpoint to md and added some SEO good practices

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,13 +96,13 @@ h3 {
   text-align: center;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
   h1 {
-    font-size: 34px;
+    font-size: 36px;
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 30px;
   }
 
   h3 {
@@ -117,5 +117,10 @@ h3 {
 
   a {
     font-size: 12px;
+  }
+
+  .projects-brief p,
+  .projects-brief h2 {
+    text-align: center;
   }
 }
